Changes to notebooks

--- a/Transfer Learning Notebooks/InceptionV3 on Spectrogram - kFold.ipynb
+++ b/Transfer Learning Notebooks/InceptionV3 on Spectrogram - kFold.ipynb
@@ -30,18 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import matplotlib.pyplot as plt\n",
-    "import json"
+    "import json\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +60,12 @@
     "\n",
     "    for gen in generators:\n",
     "        for data, labels in gen:\n",
-    "            yield data, labels\n",
-    "\n",
-    "            \n"
+    "            yield data, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "urban_sounds_folder = \"/media/romulo/6237-3231/urban_sound_challenge/spectrograms\""
+    "urban_sounds_folder = \"/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,25 +157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold1',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold2',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold3',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold4',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold5',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold6',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold7',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold8',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold9',\n",
-       " '/media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold10']"
+       "['/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold1',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold2',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold3',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold4',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold5',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold6',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold7',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold8',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold9',\n",
+       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold10']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +202,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,15 +216,15 @@
       "=================================================================\n",
       "inception_v3 (Model)         (None, 2, 6, 2048)        21802784  \n",
       "_________________________________________________________________\n",
-      "global_average_pooling2d_4 ( (None, 2048)              0         \n",
+      "global_average_pooling2d_2 ( (None, 2048)              0         \n",
       "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 2000)              4098000   \n",
+      "dense_4 (Dense)              (None, 2000)              4098000   \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 2000)              0         \n",
+      "dropout_2 (Dropout)          (None, 2000)              0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 2000)              4002000   \n",
+      "dense_5 (Dense)              (None, 2000)              4002000   \n",
       "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 10)                20010     \n",
+      "dense_6 (Dense)              (None, 10)                20010     \n",
       "=================================================================\n",
       "Total params: 29,922,794\n",
       "Trainable params: 8,120,010\n",
@@ -253,14 +254,15 @@
     "add_model.add(GlobalAveragePooling2D())\n",
     "add_model.add(Dense(2000,activation='relu'))\n",
     "add_model.add(Dropout(0.3))\n",
+    "#add_model.add(Dense(2000,activation='relu'))\n",
     "add_model.add(Dense(2000,activation='relu'))\n",
     "#add_model.add(Dense(512,activation='relu'))\n",
     "add_model.add(Dense(nclass, \n",
     "                    activation='softmax'))\n",
     "\n",
     "#set optimizer\n",
-    "opt = optimizers.Adam(lr=0.005, beta_1=0.9, beta_2=0.999, decay=0.0)\n",
-    "#opt = optimizers.SGD(lr=0.01, momentum=0.9)\n",
+    "#opt = optimizers.Adam(lr=0.05, beta_1=0.9, beta_2=0.999, decay=0.0)\n",
+    "opt = optimizers.SGD(lr=0.05, momentum=0.9,decay = 0.002)\n",
     "model = add_model\n",
     "model.compile(loss='categorical_crossentropy', \n",
     "              optimizer=opt,\n",
@@ -279,51 +281,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running fold 1, holding data from /media/romulo/6237-3231/urban_sound_challenge/spectrograms/fold1 and training on the remaining 9\n",
-      "Epoch 1/10\n",
-      "Found 806 images belonging to 10 classes.\n",
-      "Found 873 images belonging to 10 classes.\n",
+      "Running fold 1, holding data from /media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold1 and training on the remaining 9\n",
+      "Epoch 1/100\n",
+      "Found 888 images belonging to 10 classes.Found 873 images belonging to 10 classes.\n",
+      "\n",
+      "Found 837 images belonging to 10 classes.\n",
+      "Found 990 images belonging to 10 classes.\n",
       "Found 936 images belonging to 10 classes.\n",
       "Found 816 images belonging to 10 classes.\n",
-      "Found 888 images belonging to 10 classes.\n",
-      "Found 990 images belonging to 10 classes.\n",
-      "Found 838 images belonging to 10 classes.\n",
+      "Found 806 images belonging to 10 classes.\n",
       "Found 925 images belonging to 10 classes.\n",
       "Found 823 images belonging to 10 classes.\n",
-      "Found 837 images belonging to 10 classes.\n",
-      "225/225 [==============================] - 754s 3s/step - loss: 14.1157 - acc: 0.1206 - val_loss: 14.1033 - val_acc: 0.1250\n",
-      "Epoch 2/10\n",
-      " 58/225 [======>.......................] - ETA: 8:25 - loss: 14.3812 - acc: 0.1078"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-59-e33d305eee9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m                               \u001b[0mvalidation_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mapprox_fold_size\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m                               \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m                               verbose=True)\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'trained_model_fold_{}.h5'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'training_history_fold_{}.json'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name + '` call to the ' +\n\u001b[1;32m     90\u001b[0m                               'Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 91\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   1416\u001b[0m             \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1417\u001b[0m             \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1418\u001b[0;31m             initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1420\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0minterfaces\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_generator_methods_support\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/keras/engine/training_generator.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(model, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m    215\u001b[0m                 outs = model.train_on_batch(x, y,\n\u001b[1;32m    216\u001b[0m                                             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m                                             class_weight=class_weight)\n\u001b[0m\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mtrain_on_batch\u001b[0;34m(self, x, y, sample_weight, class_weight)\u001b[0m\n\u001b[1;32m   1215\u001b[0m             \u001b[0mins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msample_weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1216\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_train_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1217\u001b[0;31m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1218\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0munpack_singleton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2713\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2714\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2715\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2716\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2717\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mpy_any\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2673\u001b[0m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_metadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2674\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2675\u001b[0;31m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2676\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfetched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1437\u001b[0m           ret = tf_session.TF_SessionRunCallable(\n\u001b[1;32m   1438\u001b[0m               \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1439\u001b[0;31m               run_metadata_ptr)\n\u001b[0m\u001b[1;32m   1440\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m           \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Found 838 images belonging to 10 classes.\n",
+      "225/225 [==============================] - 159s 707ms/step - loss: 14.2681 - acc: 0.1111 - val_loss: 14.1033 - val_acc: 0.1250\n",
+      "Epoch 2/100\n",
+      "225/225 [==============================] - 129s 573ms/step - loss: 14.2555 - acc: 0.1156 - val_loss: 14.0437 - val_acc: 0.1287\n",
+      "Epoch 3/100\n",
+      "197/225 [=========================>....] - ETA: 14s - loss: 14.2465 - acc: 0.1161"
      ]
     }
    ],
    "source": [
-    "num_folds = 1 #1 to 10\n",
+    "num_folds = 10 #1 to 10\n",
     "fold = 0\n",
     "for directory in fold_directories:\n",
     "    fold +=1\n",
@@ -346,7 +332,7 @@
     "                                       img_width=img_width)\n",
     "    history = model.fit_generator(train_generator,\n",
     "                              steps_per_epoch=approx_fold_size*9/batch_size,\n",
-    "                              epochs=10,\n",
+    "                              epochs=100,\n",
     "                              validation_data = test_generator,\n",
     "                              validation_steps=approx_fold_size/batch_size,\n",
     "                              shuffle=True, \n",
@@ -393,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
